@startuml

title __MEMBERFACTORY's Class Diagram__\n

  namespace  {
    namespace emberFactory {
      class MemberFactory.BasicMember {
          + BasicMember()
      }
    }
  }
  

  namespace  {
    namespace emberFactory {
      class MemberFactory.LibraryMember {
          + LibraryMember()
          + startMember()
      }
    }
  }
  

  namespace  {
    namespace emberFactory {
      class MemberFactory.LoyalMember {
          + LoyalMember()
      }
    }
  }
  

  namespace  {
    namespace emberFactory {
      class MemberFactory.Member {
          ~ address : String
          ~ age : String
          ~ duration : String
          ~ memberType : String
          ~ name : String
          + getMemberType()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace emberFactory {
      class MemberFactory.MemberFactory {
          + createMember()
      }
    }
  }
  

  namespace  {
    namespace emberFactory {
      class MemberFactory.MemberFactoryDriver {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace emberFactory {
      class MemberFactory.OAPMember {
          + OAPMember()
      }
    }
  }
  

  namespace  {
    namespace emberFactory {
      class MemberFactory.StudentMember {
          + StudentMember()
      }
    }
  }
  

  MemberFactory.BasicMember -up-|> MemberFactory.Member
  MemberFactory.LibraryMember o-- MemberFactory.MemberFactory : factory
  MemberFactory.LoyalMember -up-|> MemberFactory.Member
  MemberFactory.OAPMember -up-|> MemberFactory.Member
  MemberFactory.StudentMember -up-|> MemberFactory.Member


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
